# workstation

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: ansible.yml  pre-commit.yml
ansible/: Makefile  Pipfile  inventory.yml  main.yml  requirements.txt  site.yml
ansible/collections/: requirements.yml
ansible/roles/docker/meta/: main.yml
ansible/roles/docker/tasks/: main.yml  ubuntu.yml
ansible/roles/homebrew/meta/: main.yml
ansible/roles/homebrew/tasks/: main.yml  ubuntu.yml
ansible/roles/macos/defaults/: main.yml
ansible/roles/macos/meta/: main.yml
ansible/roles/macos/tasks/: main.yml
ansible/roles/nix/defaults/: main.yml
ansible/roles/nix/handlers/: main.yml
ansible/roles/nix/tasks/: main.yml
ansible/roles/nix/tests/: test.yml
ansible/roles/nix/vars/: main.yml
ansible/roles/ubuntu/defaults/: main.yml
ansible/roles/ubuntu/meta/: main.yml
ansible/roles/ubuntu/tasks/: main.yml
