[tool.poetry]
name = "workstation"
version = "0.1.0"
description = ""
authors = ["Mark Mercado <mamercad@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^5.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
